# Super-Mario-Replica

./: 1st_report.md  CMakeLists.txt  README.md  build_log.txt  debug.txt  main.cpp
1st_src/: CMakeLists.txt  debug.txt  draft4.md  main.cpp  test.cpp  test_mario.cpp
accounts/: Guest.txt  TestUser2.txt  TestUser3.txt  Thai.txt  dasdgc.txt  readme.txt
src/Core/: AssetManager.cpp  GameEngine.cpp  GameEngine.h  GameEngine.hpp  GameState.h  GameStateManager.cpp  GameStateManager.h  InputManager.cpp  SoundManager.cpp  SoundManager.h  SoundManager.hpp
src/Entities/: Block.cpp  Block.h  Block.hpp  DynamicEntity.cpp  DynamicEntity.hpp  Enemy.cpp  Enemy.h  Enemy.hpp  Entity.cpp  Entity.h  Fireball.cpp  Fireball.hpp  Goomba.cpp  Goomba.h  Goomba.hpp  InteractiveBlock.cpp  InteractiveBlock.h  InteractiveBlock.hpp  Item.cpp  Item.hpp  Koopa.cpp  Koopa.h  Koopa.hpp  PiranhaPlant.cpp  PiranhaPlant.hpp  Player.cpp  Player.h  Player.hpp  PlayerPowerState.cpp  RockHead.cpp  RockHead.h  RockHead.hpp  SpecialMove.cpp  SpecialMove.h  SpriteAnimator.h  StaticEntity.cpp  StaticEntity.h  StaticEntity.hpp
src/Persistence/: Account.cpp  SaveManager.cpp  SaveManager.hpp
src/Physics/: Camera.cpp  CollisionManager.cpp  CollisionManager.h
src/States/: GameOverState.cpp  GameOverState.h  GameOverState.hpp  GameplayState.cpp  GameplayState.hpp  LevelSelectState.cpp  LevelSelectState.h  LevelSelectState.hpp  LoginState.cpp  LoginState.h  LoginState.hpp  MainMenuState.cpp  MainMenuState.hpp  PauseState.cpp  PauseState.h  PauseState.hpp  RegisterState.cpp  RegisterState.h  RegisterState.hpp  (+3 more)
(+38 files in other folders)
